--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,6 +16,13 @@
   width: 100%;
   z-index: 2;
   font-family: var(--font-mono);
+  width: 800px;
+  height:600px;
+}
+
+.embeddedExplorer {
+  width: 100%;
+  height: 100%;
 }
 
 .description a {
